--- a/react-app/src/components/StoryTileFourSkeleton/StoryTileFourSkeleton.css
+++ b/react-app/src/components/StoryTileFourSkeleton/StoryTileFourSkeleton.css
@@ -1,10 +1,11 @@
 .story-tile-4-skeleton {
-  width: calc(100% - 25px);
+  width: calc(100% - 40px);
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: flex-start;
   margin-left: 25px;
+  margin-right: 15px;
   margin-top: 20px;
   padding-bottom: 20px;
   border-bottom: 1px solid #f0f0f0;
